--- a/src/classes/IndustrySearchCodeController.cls
+++ b/src/classes/IndustrySearchCodeController.cls
@@ -1,7 +1,7 @@
 /**
  *  Industry codes search by code controller class.
  *
- *  Copyright (c) Wiregrass Code Technology 2014-15
+ *  Copyright (c) 2014-17 Wiregrass Cloud Technology
  */
 public with sharing class IndustrySearchCodeController {
 
